--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bcrypt-nodejs": "^0.0.3",
     "bitstamp-ws": "^0.1.1",
     "body-parser": "^1.16.1",
     "cookie-parser": "^1.4.3",
@@ -20,7 +21,12 @@
     "debug": "^3.0.0",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "express-validation": "^1.0.2",
     "morgan": "^1.8.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "pg": "^7.4.1",
+    "sequelize": "^4.32.1",
     "serve-favicon": "^2.4.3",
     "socket.io": "^2.0.4"
   },
