--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "debug": "^3.0.0",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "express-session": "^1.15.6",
     "express-validation": "^1.0.2",
     "morgan": "^1.8.2",
     "passport": "^0.4.0",
